<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EjemploIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="form">Form</string>
    <string name="camera">Camera</string>
    <string name="contact">Contact</string>
    <string name="escribir">Escribir...</string>
    <string name="respuesta_form">Respuesta del formulario</string>
    <string name="title_activity_activity_form">ActivityForm</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>

</resources>
